[package]
name = "rehash-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
rehash-generator = { path = "../rehash-generator" }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
base64 = "0.22.0"
aes-gcm = "0.10.3"
